Initial scaffold of board in html

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,1 +1,8 @@
-<h1>Hello there</h1>
+<h1>Battle Shipping</h1>
+
+<div id="boards">
+  <section id="humans-board">
+  </section>
+  <section id="computers-board">
+  </section>
+</div>
