Insert row & col headers + Initial styling of boards

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,8 +1,26 @@
-<h1>Battle Shipping</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <header>
+    <h1>Battle Shipping</h1>
+  </header>
 
-<div id="boards">
-  <section id="humans-board">
-  </section>
-  <section id="computers-board">
-  </section>
-</div>
+  <main>
+    <div id="boards">
+      <section id="humans-board">
+      </section>
+      <section id="computers-board">
+      </section>
+    </div>
+
+  </main>
+  
+  
+</body>
+</html>
+
