--- a/src/views/partials/_board.html
+++ b/src/views/partials/_board.html
@@ -1,123 +1,148 @@
 <h3 class="board-title"></h3>
-<table id="humans-board">
-  <tr id="row-a">
-    <td class="col-1">Hey</td>
-    <td class="col-2">You</td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-b">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-c">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-d">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-e">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-f">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-g">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-h">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-i">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
-  <tr id="row-j">
-    <td class="col-1"></td>
-    <td class="col-2"></td>
-    <td class="col-3"></td>
-    <td class="col-4"></td>
-    <td class="col-5"></td>
-    <td class="col-6"></td>
-    <td class="col-7"></td>
-    <td class="col-8"></td>
-    <td class="col-9"></td>
-    <td class="col-10"></td>
-  </tr>
+<table class="board" id="humans-board">
+  <tbody>
+    <tr>
+      <th></th>
+      <th>1</th>
+      <th>2</th>
+      <th>3</th>
+      <th>4</th>
+      <th>5</th>
+      <th>6</th>
+      <th>7</th>
+      <th>8</th>
+      <th>9</th>
+      <th>10</th>
+    </tr>
+    <tr id="row-a">
+      <th>A</th>
+      <td class="col-1">🌊</td>
+      <td class="col-2">🛳️</td>
+      <td class="col-3">💥</td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-b">
+      <th>B</th>
+      <td class="col-1 emoji-bg"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-c">
+      <th>C</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-d">
+      <th>D</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-e">
+      <th>E</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-f">
+      <th>F</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-g">
+      <th>G</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-h">
+      <th>H</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-i">
+      <th>I</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+    <tr id="row-j">
+      <th>J</th>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
+      <td class="col-4"></td>
+      <td class="col-5"></td>
+      <td class="col-6"></td>
+      <td class="col-7"></td>
+      <td class="col-8"></td>
+      <td class="col-9"></td>
+      <td class="col-10"></td>
+    </tr>
+  </tbody>
 </table>
