--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -1,25 +1,57 @@
+@media (max-width: 800px) {
+  #boards {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
 #boards {
   display: flex;
   justify-content: center;
-  gap: 5rem;
+  gap: clamp(1rem, 10vw, 6rem);
 }
 
-table {
-  width: clamp(20rem, 30vw, 35rem);
+.board {
+  display: grid;
+  grid-template-columns: auto repeat(10, 1fr);
+  grid-template-rows: auto repeat(10, 1fr);
+  max-width: 25rem;
+}
+
+.board-title {
+  text-align: center;
+}
+
+.board tbody {
+  display: contents;
   aspect-ratio: 1/1;
+}
+
+.board th {
+  font-weight: bold;
+  padding: 0.5rem;
+}
+
+.board tr {
+  display: contents;
+}
+
+.board td {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  vertical-align: middle;
+  /* font-size: min(5vw, 5vh); */
+  font-size: xx-large;
+  width: 100%;
+  height: 100%;
   border: 0.2px, solid, black;
+  aspect-ratio: 1/1; 
+  padding: 0;
 }
-
-tr {
-  display: flex;
-}
-
-td {
-  width: 4rem;
-  aspect-ratio: 1/1;
-  border: 0.2px, solid, black;
-}
-
-
