Build UIController.displayBoard()

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -11,6 +11,9 @@
   </header>
 
   <main>
+    <div>
+      <!-- display turn & win section -->
+    </div>
     <div id="boards">
       <section id="humans-board">
       </section>
