--- a/src/views/partials/_board.html
+++ b/src/views/partials/_board.html
@@ -16,9 +16,9 @@
     </tr>
     <tr id="row-a">
       <th>A</th>
-      <td class="col-1">🌊</td>
-      <td class="col-2">🛳️</td>
-      <td class="col-3">💥</td>
+      <td class="col-1"></td>
+      <td class="col-2"></td>
+      <td class="col-3"></td>
       <td class="col-4"></td>
       <td class="col-5"></td>
       <td class="col-6"></td>
@@ -29,7 +29,7 @@
     </tr>
     <tr id="row-b">
       <th>B</th>
-      <td class="col-1 emoji-bg"></td>
+      <td class="col-1"></td>
       <td class="col-2"></td>
       <td class="col-3"></td>
       <td class="col-4"></td>
