--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,13 +7,26 @@
 </head>
 <body>
   <header>
-    <h1>Battle Shipping</h1>
+    <h1 id="logo-type">Battle Shipping</h1>
   </header>
 
   <main>
-    <div>
-      <!-- display turn & win section -->
+    <!-- display turn & win section -->
+    <div id="info">
+      <section id="human-fleet">
+        <h5>Human fleet</h5>
+      </section>
+      <section id="dialogue">
+        <div>
+          <p>Get ready to play Battleships</p>
+          <button onclick="location.reload()">Play new game</button>
+        </div>
+      </section>
+      <section id="computer-fleet">
+        <h5>Computer fleet</h5>
+      </section>
     </div>
+
     <div id="boards">
       <section id="humans-board">
       </section>
