--- a/src/views/partials/_board.html
+++ b/src/views/partials/_board.html
@@ -1,4 +1,6 @@
-<h3 class="board-title"></h3>
+<div class="board-header">
+  <h3 class="board-title"></h3>
+</div>
 <table class="board">
   <tbody>
     <tr>
