Remove computer board listeners at end of humans turn, + other refactorings - Add Board.getComputerMove (to fix error where computer was choosing   random cells which sometimes had already been attacked)   - yet tobe tested. - correct computersBoard assignment error in Game.startGame() - refactor UIController displayBoard cell innerText conditional - refactor addComputerEventListeners to store listener callbacks in a   computerBoardListeners map object - write a removeComputerBoardListeners function that deconstructs from   map object and calls remove event listener on each - change non unique row ids from _board to classes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,16 +20,13 @@
         </div>
       </section>
     </div>
-
     <div id="boards">
-      <section id="humans-board">
+      <section id="human-board">
       </section>
-      <section id="computers-board">
+      <section id="computer-board">
       </section>
     </div>
-
   </main>
-  
   
 </body>
 </html>
