--- a/src/views/partials/_board.html
+++ b/src/views/partials/_board.html
@@ -16,7 +16,7 @@
       <th>9</th>
       <th>10</th>
     </tr>
-    <tr id="row-a">
+    <tr class="row-a">
       <th>A</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -29,7 +29,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-b">
+    <tr class="row-b">
       <th>B</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -42,7 +42,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-c">
+    <tr class="row-c">
       <th>C</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -55,7 +55,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-d">
+    <tr class="row-d">
       <th>D</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -68,7 +68,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-e">
+    <tr class="row-e">
       <th>E</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -81,7 +81,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-f">
+    <tr class="row-f">
       <th>F</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -94,7 +94,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-g">
+    <tr class="row-g">
       <th>G</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -107,7 +107,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-h">
+    <tr class="row-h">
       <th>H</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -120,7 +120,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-i">
+    <tr class="row-i">
       <th>I</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
@@ -133,7 +133,7 @@
       <td class="col-9"></td>
       <td class="col-10"></td>
     </tr>
-    <tr id="row-j">
+    <tr class="row-j">
       <th>J</th>
       <td class="col-1"></td>
       <td class="col-2"></td>
