--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -113,6 +113,10 @@ section#computer-fleet {
   border-radius: 1px; /* Slight rounded corners */
 }
 
+.grid-item.hit {
+  background-color: red;
+}
+
 /* Positioning Ships Using Grid */
 .carrier:nth-child(1) { grid-column: 1; grid-row: 1; }
 .carrier:nth-child(2) { grid-column: 2; grid-row: 1; }
