Styling and UX refinement

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,8 +6,9 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="confetti-container"></div>
   <header>
-    <h1 id="logo-type">Battle Shipping</h1>
+    <h1 id="logo-type">Battleships<span>💣</span></h1>
   </header>
 
   <main>
