--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -1,14 +1,24 @@
+@font-face {
+  font-family: germania;
+  src: url(../fonts/GermaniaOne-Regular.ttf)
+}
+
 @media (max-width: 800px) {
   #boards {
     flex-direction: column;
+    gap: 0px !important;
     align-items: center;
+    /* height: auto; */
   }
 }
 
-
-
 body {
   margin: 0;
+  font-family: 'germania';
+}
+
+h3 {
+  font-size: 1.35rem;
 }
 
 /* #################### Header ######################### */
@@ -16,8 +26,8 @@ body {
 header {
   display: flex;
   align-items: center;
-  height: 3.4rem;  
-  --s: 5px; /* control the size*/
+  height: 4.3rem;  
+  --s: 4px; /* control the size*/
   --c1: #e5fcc2;
   --c2: #0cbbde;
   --_s:37.5% 12.5% at 62.5%;
@@ -41,11 +51,19 @@ header {
 }
 
 h1#logo-type {
+  font-family: 'germania';
+  letter-spacing: 0.1rem;
+  font-size: 3rem;
   margin: 0.2;
-  margin-left: 1rem;
+  margin-left: 2rem;
   justify-self: start;
   color: rgb(4, 4, 56);
-  background-color: rgba(255, 255, 255, 0.579);
+  background-color: rgba(255, 255, 255, 0.161);
+}
+
+h1#logo-type span {
+  margin-left: 1.1rem;
+  font-size: 2.6rem;
 }
 
 /* #################### Info section ######################### */
@@ -70,6 +88,7 @@ section#dialogue div {
 section#dialogue div p {
   display: flex;
   align-items: center;
+  font-size: 1.2rem;
   height: 2rem; 
   width: 15rem;
   border-radius: 4px;
@@ -77,9 +96,14 @@ section#dialogue div p {
   padding-left: 0.8rem;
 }
 
+button {
+  height: 1.7rem;
+  font-family: 'germania';
+  cursor: pointer;
+}
+
 section#dialogue button {
   width: 7rem;
-  height: 1.7rem;
   margin-left: 1rem;
 }
 
@@ -157,7 +181,8 @@ section#computer-fleet {
 
 .board-header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-left: 1.6rem;
 }
 
 .board-title {
@@ -201,6 +226,8 @@ section#computer-fleet {
 #reload-btn {
   display: block;
   margin: 2rem auto;
+  transform: translateX(1.5rem);
+
   /* margin-left: auto;
   margin-right: auto; */
   /* justify-self: center; */
