--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,7 +16,7 @@
     <div id="info">
       <section id="dialogue">
         <div>
-          <p></p>
+          <p class=""></p>
           <button onclick="location.reload()">Play new game</button>
         </div>
       </section>
