--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -25,11 +25,12 @@ h3 {
 
 header {
   display: flex;
+  /* justify-content: center; */
   align-items: center;
   height: 4.3rem;  
   --s: 4px; /* control the size*/
   --c1: #e5fcc2;
-  --c2: #0cbbde;
+  --c2: #0cbbdea3;
   --_s:37.5% 12.5% at 62.5%;
   --_g:34% 99%,#0000 101%;
   --g1:radial-gradient(var(--_s) 100%,#0000 32%,var(--c1) var(--_g));
@@ -47,7 +48,6 @@ header {
   var(--g4) calc(3*var(--s)) 0,
   repeating-linear-gradient(var(--c1) 0 25%,var(--c2) 0 50%);
   background-size: calc(4*var(--s)) calc(12*var(--s));
-  
 }
 
 h1#logo-type {
@@ -56,9 +56,9 @@ h1#logo-type {
   font-size: 3rem;
   margin: 0.2;
   margin-left: 2rem;
-  justify-self: start;
+  /* justify-self: start; */
   color: rgb(4, 4, 56);
-  background-color: rgba(255, 255, 255, 0.161);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 h1#logo-type span {
