--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -11,8 +11,8 @@
   }
 }
 @media (max-width: 550px) {
-  section#dialogue {
-    justify-content: flex-start !important;
+  section#dialogue div {
+    transform: none !important;
   }
   
   #info > p {
