--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -230,7 +230,7 @@ section#computer-fleet {
   font-size: xx-large;
   width: 100%;
   height: 100%;
-  border: 0.2px, solid, black;
+  border: 0.2px solid black;
   aspect-ratio: 1/1; 
   padding: 0;
 }
