further mobile styling changes - board header justification

--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -23,6 +23,11 @@
   header {
     justify-content: center;
   }
+
+  .board-header {
+    justify-content: space-around !important;
+  }
+
 }
 
 body {
